# mlx-vs-numba

./: LICENSE  README.md  benchmark.py  plots.ipynb  pyproject.toml  times.csv
mlxvsnumba/: mlx_simul.py  numba_simul.py  numpy_simul.py  test_estimators.py
