[tool.poetry]
name = "mlxvsnumba"
version = "0.1.0"
description = ""
authors = ["Vincent Grégoire <vincent@codes.finance>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
numba = "^0.59.0"
mlx = "^0.7.0"
pyarrow = "^15.0.2"
statsmodels = "^0.14.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
